<resources>
    <string name="app_name">Covid-19 Vaccination</string>
    <string name="splash_text">Covid-19 Vaccination</string>
    <string name="register_splash">Register today!</string>
    <string name="dashboard">Dashboard</string>
    <string name="vaccines">Available Vaccines</string>
    <string name="call">Contact us</string>
    <string name="phone_text">Vaccine Hotline Number</string>
    <string name="title">Novel Coronavirus (2019-nCoV)</string>
    <string name="details">This app is to assist you to register for COVID-19 Vaccine and orientate you with the details necessary before proceeding with the registration process
    </string>
    <string name="yes_button">YES</string>
    <string name="no_button">NO</string>
    <string name="initial">0/5</string>
    <string name="correct_toast">Good!</string>
    <string name="incorrect_toast">Sorry you not qualify to register for this Vaccine!</string>
    <string name="question_1">Are you 18 or Above\?</string>
    <string name="question_2">Are you Healthy and Certain that you are NOT having any history of severe allergies\?</string>
    <string name="question_3">Do you understand that this vaccine does NOT fully guarantee you of not getting a COVID-19 infection in the future\?</string>
    <string name="question_4">Do you understand that taking this vaccine may cause reactions and side effects as described in the vaccine information\?</string>
    <string name="question_5">Are you willing to take this vaccine and ready to complete the total dose intake as scheduled\?</string>
    <string name="vaccine_reg">Vaccine Registration</string>
    <string name="reg_success">Registration Successful</string>
    <string name="submit">Submit</string>
    <string name="etEmailHint">Enter your email</string>
    <string name="tvEmailText">Email</string>
    <string name="etAddressHint">Enter your address</string>
    <string name="tvAddressText">Address</string>
    <string name="tvStateText">State</string>
    <string name="etPhoneConfirmHint">Confirm phone number</string>
    <string name="tvPhoneConfirmText">Please Confirm Your Phone Number</string>
    <string name="etPhoneHint">Enter your phone number</string>
    <string name="tvPhoneText">Phone Number</string>
    <string name="etIcPassportConfirmHint">Confirm IC / Passport No.</string>
    <string name="tvIcPassportConfirmText">Please Confirm Your IC / Passport No</string>
    <string name="etIcPassportHint">Enter IC / Passport No.</string>
    <string name="tvIcPassportText">IC / Passport No</string>
    <string name="rbFemaleText">Female</string>
    <string name="rbMaleText">Male</string>
    <string name="tvGenderText">Gender</string>
    <string name="etAgeHint">Enter your age</string>
    <string name="tvAgeText">Age</string>
    <string name="etNameHint">Enter your name</string>
    <string name="tvNameText">Name</string>
    <string name="headingText">Enter Your Information</string>
    <string name="tvNameLabelText">Name:</string>
    <string name="tvAgeLabelText">Age:</string>
    <string name="tvGenderLabelText">Gender:</string>
    <string name="tvIcPassportLabelText">IC / Passport No:</string>
    <string name="tvPhoneLabelText">Phone Number:</string>
    <string name="tvStateLabelText">State:</string>
    <string name="tvAddressLabelText">Address:</string>
    <string name="tvEmailLabelText">Email:</string>
    <string name="heading2Text">Registration Summary</string>
    <string name="tvVaccineNameLabelText">Vaccine Name:</string>
    <string-array name="phoneTypes">
        <item>Mobile</item>
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>
    </string-array>
    <string-array name="states">
        <item>Select your state</item>
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Kuala Lumpur</item>
        <item>Labuan</item>
        <item>Melaka</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Perlis</item>
        <item>Putrajaya</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terangganu</item>
    </string-array>
    <string-array name="appointmentTimes">
        <item>10:00</item>
        <item>12:00</item>
        <item>14:00</item>
        <item>16:00</item>
    </string-array>
    <string name="centers">LIST OF VACCINES ADMINISTRATION CENTRES</string>
    <string name="kl">Kuala Lumpur Convention Centre (KLCC)</string>
    <string name="labuan">Dewan Serbaguna Perbadanan Labuan</string>
    <string name="putrajaya">Dewan Sri Seroja</string>
    <string name="selangor">Stadium Tertutup Kuala Selangor</string>
    <string name="sarawak">Pusat Jantung Sarawak</string>
    <string name="sabah">Dewan Serbaguna Libaran</string>
    <string name="johor">Hospital Segamat</string>
    <string name="melaka">Hospital Melaka</string>
    <string name="negeri_sembilan">Klinik Kesihatan Seremban 2</string>
    <string name="pahang">Bilik Gerakan JKK Simpang Pelangai</string>
    <string name="terengganu">Hospital Hulu Terengganu</string>
    <string name="kelantan">Hospital Tengku Anis</string>
    <string name="perak">Dewan Bandaran Pengkalan Hulu</string>
    <string name="kedah">Dewan Al Hana, Kedah</string>
    <string name="penang">Hospital Kepala Batas</string>
    <string name="perlis">Dewan Seri Melati, Perlis</string>
    <string name="astrazeneca">
        Astrazeneca\n
                \nCOVID-19 Vaccine (AZD1222)  \n
                \n• Vaccination protects people from becoming ill with COVID-19.\n
                \n• AstraZeneca COVID-19 Vaccine demonstrated high efficacy in clinical trials conducted in the United Kingdom and the United States, and is very effective in real world rollouts in preventing severe illness, hospitalisation and death. \n
                \n• AstraZeneca vaccine is approved by the National Pharmaceutical Regulatory Agency (NPRA) as a safe and effective vaccine against COVID-19 infection for adults 18 years and above. \n
                \n• Common side effects include pain or tenderness at the injection site, tiredness, headache, muscle pain, and fever and chills (usually for 24 to 48 hours). \n
                \n• An extremely rare possible side effect is thrombosis with thrombocytopenia syndrome (TTS), where 9.3 cases per million doses have been reported. \n
                \n• No specific risk factors have been confirmed for TTS. Available data suggest more cases in adults under 60 years of age compared to older adults, and in women compared to men. \n
                \nMonitor signs and symptoms between 4 to 30 days after vaccination. Please refer to the AstraZeneca Clinical Guidance for COVID-19 Vaccination (Malaysia). \n
                \nThe benefits of vaccination greatly outweigh the risks in this situation. If you have any concerns or questions, you can discuss with your doctor before you receive the vaccine. \n
                \nSeek medical attention immediately if you experience \n
                1. A severe persistent headache that :
                \n    • Does not improve with simple painkillers
                \n    • Gets worse when lying down or accompanied nausea and vomiting.\n
                2. Neurological symptoms such as : \n
                    • Blurred vision \n
                    • Difficulty with speech\n
                    • Drowsiness \n
                    • Seizures \n
                3. Shortness of breath or chest pain \n
                4. Swelling of the legs \n
                5. Persistent abdominal pain \n
                6. Tiny blood spots under the skin\n
                \nInformation on the AstraZeneca vaccine \n
                Monitor signs and symptoms between 4 to 30 days after vaccination. Please refer to the AstraZeneca Clinical Guidance for COVID-19 Vaccination (Malaysia). \n
                The benefits of vaccination greatly outweigh the risks in this situation. If you have any concerns or questions, you can discuss with your doctor before you receive the vaccine. \n
                \n1. Vaxzevria (previously COVID-19 Vaccine AstraZeneca) \n
                \n2. The Oxford/AstraZeneca COVID-19 vaccine: what you need to know \n
                \n3. Interim recommendations for use of the ChAdOx1-S [recombinant] vaccine against COVID-19 (AstraZeneca COVID-19 \n
                vaccine AZD1222, SII Covishield, SK Bioscience) \n
                \n4. Statement of the Strategic Advisory Group of Experts (SAGE) on Immunization: Continued review of emerging evidence on AstraZeneca COVID-19 Vaccines \n
                \n5. Global Advisory Committee on Vaccine Safety (GACVS) review of latest evidence of rare adverse blood coagulation events with AstraZeneca COVID-19 Vaccine (Vaxzevria and Covishield) \n
                \n6. AstraZeneca COVID-19 vaccine: review of very rare cases of unusual blood clots continues \n
                \nRead More \@
                \nvaksincovid.gov.my/en \n

    </string>
    <string name="tvPasswordText">Password</string>
    <string name="etPasswordHint">Enter password</string>
    <string name="tvPasswordConfirmText">Please Confirm Your Password</string>
    <string name="etPasswordConfirmHint">Confirm Password</string>
    <string name="vaccination">Vaccination</string>
    <string name="phone_number_type">Phone Number / Type</string>
    <string name="appointment_date_and_time">Appointment Date and Time</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>